--- a/app/src/main/res/layout/wallet_fragment_dapp.xml
+++ b/app/src/main/res/layout/wallet_fragment_dapp.xml
@@ -6,21 +6,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".dapp.DappFragment">
 
+    <include
+        android:id="@+id/title"
+        layout="@layout/wallet_common_title_layout"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_dapp_url"
-        android:background="@drawable/wallet_edittext_background_grey"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/wallet_dapp_edittext"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="0dp"
         android:singleLine="true"
         android:paddingLeft="10dp"
         android:hint="@string/wallet_dapp_search_hint"
+        android:textSize="15sp"
+        android:textColor="@color/wallet_text_dapp_color"
         android:layout_marginLeft="20dp"
         android:imeOptions="actionDone"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:layout_height="48dp" />
+        android:layout_height="40dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
