--- a/app/src/main/res/layout/wallet_main_tab_item.xml
+++ b/app/src/main/res/layout/wallet_main_tab_item.xml
@@ -4,19 +4,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/tab_image"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
         android:src="@drawable/wallet_me_icon" />
 
     <TextView
         android:id="@+id/tab_name"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textSize="15sp"
+        android:layout_marginTop="2dp"
+        android:textSize="10sp"
         android:layout_height="wrap_content"
         tools:text="@string/wallet_me" />
 </LinearLayout>
