--- a/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/tv_assets_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="26dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@mipmap/wallet_eth_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:textColor="@color/wallet_text_grey"
-        android:textSize="18sp"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_assets_icon"
         app:layout_constraintLeft_toRightOf="@id/tv_assets_icon"
         app:layout_constraintTop_toTopOf="@id/tv_assets_icon"
