--- a/app/src/main/res/layout/wallet_fragment_wallet.xml
+++ b/app/src/main/res/layout/wallet_fragment_wallet.xml
@@ -6,32 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".wallet.mainfragment.WalletFragment">
 
+    <include
+        android:id="@+id/title"
+        layout="@layout/wallet_common_title_layout"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/wallet_card"
         layout="@layout/wallet_wallet_top_view"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <TextView
         android:id="@+id/tv_assets_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="15dp"
         android:text="@string/wallet_assets"
-        android:textColor="@color/wallet_input_password_text_gray"
-        android:textSize="20dp"
+        android:textColor="@color/wallet_text_black"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/wallet_card" />
 
     <ImageView
         android:id="@+id/add_token"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="22dp"
         android:padding="10dp"
         android:scaleType="fitXY"
         android:src="@mipmap/wallet_main_add_assets"
