--- a/app/src/main/res/layout/wallet_recyclerview_assets_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_assets_item.xml
@@ -7,26 +7,25 @@
 
     <ImageView
         android:id="@+id/tv_assets_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="60dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:src="@mipmap/wallet_eth_icon"
-        android:layout_marginRight="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/tv_assets_name"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_assets_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="83dp"
-        android:textColor="@color/wallet_text_grey"
+        android:layout_marginLeft="15dp"
+        android:textColor="@color/wallet_text_gray_color"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_assets_icon"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/tv_assets_icon"
         app:layout_constraintTop_toTopOf="@id/tv_assets_icon"
         tools:text="ETH" />
 
@@ -36,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="55dp"
-        android:textColor="@color/wallet_input_password_text_gray"
+        android:textColor="@color/wallet_text_gray_color"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
