--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3b9bff</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="wallet_line_gray">#f3f3f3</color>
+    <color name="wallet_line_gray">#EDEDED</color>
     <color name="wallet_hint_text">#aaaaaa</color>
     <color name="wallet_line_gray_deep">#eeeeee</color>
     <color name="wallet_blue">#3b9bff</color>
@@ -49,6 +49,7 @@
 
 
     <color name="wallet_text_blue_color">#007AFF</color>
-    <color name="wallet_text_gray_color">#B5B5B5</color>
+    <color name="wallet_text_title_color">#B5B5B5</color>
     <color name="wallet_text_dapp_color">#999999</color>
+    <color name="wallet_text_gray_color">#696969</color>
 </resources>
