--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
@@ -13,11 +13,13 @@
 
     <TextView
         android:id="@+id/tv_backup_top"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="23dp"
+        android:layout_marginRight="25dp"
         android:text="@string/wallet_backup_mnemonic"
-        android:textColor="@color/wallet_text_grey"
+        android:textColor="@color/wallet_black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,13 +30,14 @@
         android:id="@+id/tv_backup_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="@string/wallet_backup_preview_hint"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="15dp"
+        android:text="@string/wallet_backup_confirm_hint"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_top"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_top"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_top" />
+
 
     <View
         android:id="@+id/v_line_1"
@@ -72,10 +75,19 @@
 
     <TextView
         android:id="@+id/tv_next"
-        style="@style/WalletCommonButton"
-        android:layout_marginBottom="14dp"
-        android:text="@string/wallet_next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/wallet_main_btn_background"
+        android:gravity="center"
+        android:text="@string/wallet_finish"
+        android:textColor="@color/wallet_white"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/v_line_2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
