--- a/app/src/main/res/drawable/wallet_background_orange.xml
+++ b/app/src/main/res/drawable/wallet_background_orange.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="@color/wallet_orange" />
+    <solid android:color="@color/wallet_light_red" />
 </shape>
