--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -19,47 +19,37 @@
             <EditText
                 android:id="@+id/et_wallet_name"
                 style="@style/WalletCommonEditText"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/create_icon" />
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_create_name" />
 
             <EditText
                 android:id="@+id/et_password"
                 style="@style/WalletCommonEditText"
+                android:layout_marginTop="10dp"
                 android:inputType="textPassword"
-                android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@id/ll_warning" />
 
             <EditText
                 android:id="@+id/et_password_again"
                 style="@style/WalletCommonEditText"
+                android:layout_marginTop="10dp"
                 android:inputType="textPassword"
-                android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/et_password" />
 
             <EditText
                 android:id="@+id/et_password_tip"
                 style="@style/WalletCommonEditText"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@id/et_password_again" />
 
-            <ImageView
-                android:id="@+id/create_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="55dp"
-                android:layout_marginTop="15dp"
-                android:src="@mipmap/wallet_create_keystore"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_main_title" />
 
             <LinearLayout
                 android:id="@+id/ll_warning"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="50dp"
-                android:background="@color/wallet_orange"
+                android:layout_marginLeft="26dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="26dp"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/et_wallet_name">
 
@@ -67,72 +57,64 @@
                     android:id="@+id/tv_warning_top"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
+                    android:drawableLeft="@drawable/wallet_blue_circle_point"
+                    android:drawablePadding="5dp"
                     android:text="@string/wallet_password_warning_top"
-                    android:textColor="@color/wallet_text_orange"
-                    android:textSize="12sp" />
+                    android:textColor="@color/wallet_text_gray_color"
+                    android:textSize="11sp" />
 
                 <TextView
                     android:id="@+id/tv_warning_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:drawableLeft="@drawable/wallet_blue_circle_point"
+                    android:drawablePadding="5dp"
                     android:text="@string/wallet_password_warning_bottom"
-                    android:textColor="@color/wallet_text_orange"
-                    android:textSize="12sp" />
+                    android:textColor="@color/wallet_text_gray_color"
+                    android:textSize="11sp" />
             </LinearLayout>
 
+
             <TextView
-                android:id="@+id/tv_main_title"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_create_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                android:text="@string/wallet_welcome_to_did_world"
-                android:textColor="@color/wallet_create_wallet_text_black"
-                android:textSize="18sp"
+                android:layout_marginLeft="25dp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:text="@string/wallet_create_wallet"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:text="@string/wallet_create_wallet"
-                android:textColor="@color/wallet_input_password_text_gray"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@id/create_icon"
-                app:layout_constraintLeft_toRightOf="@id/create_icon"
-                app:layout_constraintTop_toTopOf="@id/create_icon" />
-
-            <TextView
                 android:id="@+id/tv_create"
-                android:layout_width="195dp"
-                android:layout_height="38dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="44dp"
-                android:background="@color/wallet_user_basic_info_btn"
+                android:layout_width="match_parent"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/wallet_main_btn_background"
                 android:gravity="center"
                 android:text="@string/wallet_create_btn"
                 android:textColor="@color/wallet_white"
-                android:textSize="15sp"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="30dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_password_tip" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <include
         android:id="@+id/title"
+        layout="@layout/wallet_common_title_layout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        layout="@layout/wallet_common_title_layout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
