--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_confirm.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_confirm.xml
@@ -12,13 +12,15 @@
 
     <TextView
         android:id="@+id/tv_backup_top"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
+        android:layout_marginLeft="25dp"
         android:text="@string/wallet_backup_mnemonic"
-        android:textColor="@color/wallet_text_grey"
+        android:textColor="@color/wallet_black"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginRight="25dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
@@ -27,12 +29,12 @@
         android:id="@+id/tv_backup_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:textSize="13sp"
+        android:textColor="@color/wallet_text_gray_color"
         android:text="@string/wallet_backup_confirm_hint"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_top"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_top"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_top" />
 
     <TextView
@@ -44,10 +46,9 @@
         android:textSize="13sp"
         android:padding="5dp"
         android:visibility="invisible"
-        android:textColor="@color/wallet_black"
+        android:textColor="@color/wallet_white"
         android:text="@string/wallet_mnemonic_order_error"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_top"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_hint" />
 
     <View
@@ -101,10 +102,19 @@
 
     <TextView
         android:id="@+id/tv_next"
-        style="@style/WalletCommonButton"
-        android:layout_marginBottom="14dp"
+        android:layout_width="match_parent"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/wallet_main_btn_background"
+        android:gravity="center"
         android:text="@string/wallet_finish"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/wallet_white"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/mnemonic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
