--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
@@ -6,110 +6,128 @@
     android:layout_height="match_parent"
     tools:context=".createmanager.walletcreate.MnemonicBackupHintActivity">
 
-    <!--<include-->
-    <!--android:id="@+id/title"-->
-    <!--layout="@layout/wallet_common_title_layout"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
 
     <TextView
         android:id="@+id/tv_backup_hint_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginRight="30dp"
         android:text="@string/wallet_backup_hint"
         android:textColor="@color/wallet_black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_backup_top"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:text="@string/wallet_backup_hint_top"
-        android:textColor="@color/wallet_text_grey"
+        android:textColor="@color/wallet_text_gray_color"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_hint_title" />
 
     <TextView
         android:id="@+id/tv_backup_first"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
+        android:drawableLeft="@drawable/wallet_blue_circle_point"
+        android:drawablePadding="5dp"
         android:text="@string/wallet_backup_mnemonic"
         android:textColor="@color/wallet_black"
+        android:textSize="13sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_top" />
 
     <TextView
         android:id="@+id/tv_backup_first_1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_first_1"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first" />
 
     <TextView
         android:id="@+id/tv_backup_first_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_first_2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first_1" />
 
     <TextView
         android:id="@+id/tv_backup_two"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"
         android:text="@string/wallet_offline_manager"
+        android:drawableLeft="@drawable/wallet_blue_circle_point"
+        android:drawablePadding="5dp"
         android:textColor="@color/wallet_black"
+        android:textSize="13sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first_2" />
 
     <TextView
         android:id="@+id/tv_backup_two_1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_two_1"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two" />
 
     <TextView
         android:id="@+id/tv_backup_two_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_two_2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/wallet_text_gray_color"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_backup_hint_title"
+        app:layout_constraintRight_toRightOf="@id/tv_backup_hint_title"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two_1" />
 
     <TextView
         android:id="@+id/tv_next"
-        style="@style/WalletCommonButton"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
         android:layout_marginBottom="14dp"
+        android:background="@drawable/wallet_main_btn_background"
+        android:gravity="center"
         android:text="@string/wallet_next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/wallet_white"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_backup_two_2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
