--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -15,16 +15,13 @@
  <style name="WalletCommonEditText" >
      <item name="android:layout_width">match_parent</item>
      <item name="android:layout_height">wrap_content</item>
-     <item name="android:background">@drawable/wallet_user_basic_info_edit_background</item>
+     <item name="android:background">@drawable/wallet_rectangle_line_10</item>
      <item name="android:gravity">left</item>
-     <item name="android:textSize">15sp</item>
+     <item name="android:textSize">13sp</item>
      <item name="android:textColorHint">@color/wallet_create_wallet_hint</item>
-     <item name="android:paddingLeft">13dp</item>
-     <item name="android:paddingTop">10dp</item>
-     <item name="android:paddingRight">13dp</item>
-     <item name="android:paddingBottom">10dp</item>
-     <item name="android:layout_marginLeft">50dp</item>
-     <item name="android:layout_marginRight">50dp</item>
+     <item name="android:padding">15dp</item>
+     <item name="android:layout_marginLeft">25dp</item>
+     <item name="android:layout_marginRight">25dp</item>
     </style>
 
     <style name="WalletCommonButton">
