--- a/app/src/main/res/layout/wallet_add_association_address_dialog.xml
+++ b/app/src/main/res/layout/wallet_add_association_address_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/wallet_default_address_password"
         android:textColor="@color/wallet_black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,18 +23,18 @@
         android:layout_marginTop="3dp"
         tools:text="0xsahdjsdhfjdhfjsgdfjhkjsdkghjfd"
         android:textColor="@color/wallet_text_grey"
-        android:textSize="13sp"
+        android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
     <EditText
         android:id="@+id/et_default_password"
         android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="25dp"
         android:paddingLeft="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="35dp"
         android:inputType="textPassword"
         android:background="@drawable/wallet_shape_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/wallet_association_address_password"
         android:textColor="@color/wallet_black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_default_password" />
@@ -58,18 +58,18 @@
         android:layout_marginTop="3dp"
         tools:text="0xsahdjsdhfjdhfjsgdfjhkjsdkghjfd"
         android:textColor="@color/wallet_text_grey"
-        android:textSize="13sp"
+        android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_association_title" />
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="25dp"
         android:paddingLeft="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="35dp"
         android:inputType="textPassword"
         android:background="@drawable/wallet_shape_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -89,8 +89,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_cancel"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="23dp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/line2"
@@ -101,8 +101,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="23dp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/line2"
         app:layout_constraintRight_toRightOf="parent"
