--- a/app/src/main/res/layout/wallet_fragment_common_dialog_message.xml
+++ b/app/src/main/res/layout/wallet_fragment_common_dialog_message.xml
@@ -10,12 +10,12 @@
         android:id="@+id/tv_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         tools:text="@string/wallet_upgrade_tip"
         android:textColor="@color/wallet_black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="35dp"
         android:background="@color/wallet_line_gray"
         app:layout_constraintTop_toBottomOf="@id/tv_message" />
 
@@ -35,8 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_cancel"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="20dp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/line2"
@@ -47,8 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="20dp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/line2"
         app:layout_constraintRight_toRightOf="parent"
