--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_keystore.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_keystore.xml
@@ -13,8 +13,8 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:background="@null"
             android:hint="@string/wallet_please_input_password"
             android:paddingTop="30dp"
@@ -23,6 +23,7 @@
             android:textColor="@color/wallet_text_black"
             android:textColorHint="@color/wallet_hint"
             android:textSize="15sp"
+            android:layout_marginTop="50dp"
             app:layout_constraintTop_toBottomOf="@id/top_view" />
 
         <TextView
