--- a/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
+++ b/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
@@ -2,7 +2,8 @@
 <com.idhub.wallet.createmanager.walletimport.ImportWalletInputPasswordView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@drawable/wallet_rectangle_line_10"
+    android:layout_height="wrap_content">
 
     <EditText
         android:id="@+id/password"
@@ -44,10 +45,11 @@
         android:background="@null"
         android:hint="@string/wallet_password_tip"
         android:paddingTop="20dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="15dp"
         android:textColor="@color/wallet_text_black"
         android:textColorHint="@color/wallet_hint"
         android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="@id/password"
         app:layout_constraintLeft_toLeftOf="@id/password"
         app:layout_constraintTop_toBottomOf="@id/line1" />
@@ -56,11 +58,11 @@
         android:id="@+id/set_password_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="20dp"
         android:text="@string/wallet_set_password"
         android:textColor="@color/wallet_text_black"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -77,17 +79,6 @@
         app:layout_constraintRight_toRightOf="@id/repeat_password"
         app:layout_constraintTop_toBottomOf="@id/repeat_password" />
 
-    <View
-        android:id="@+id/line2"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/wallet_line_gray"
-        android:textColor="@color/wallet_text_black"
-        android:textColorHint="@color/wallet_hint"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="@id/tip_password"
-        app:layout_constraintRight_toRightOf="@id/tip_password"
-        app:layout_constraintTop_toBottomOf="@id/tip_password" />
 
     <View
         android:id="@+id/line"
