--- a/app/src/main/res/layout/wallet_import_wallet_top_view.xml
+++ b/app/src/main/res/layout/wallet_import_wallet_top_view.xml
@@ -10,17 +10,17 @@
         android:id="@+id/key"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="25dp"
         android:background="@drawable/wallet_shape_edittext"
         android:gravity="left"
         tools:hint="@string/wallet_edit_keystore_tip"
         android:minHeight="120dp"
-        android:paddingLeft="12dp"
-        android:paddingTop="5dp"
-        android:paddingRight="12dp"
-        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         android:textSize="15sp"
         android:textColor="@color/wallet_text_black"
         android:textColorHint="@color/wallet_hint"
@@ -33,9 +33,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/wallet_background"
-        android:paddingLeft="12dp"
+        android:paddingLeft="25dp"
         android:paddingTop="15dp"
-        android:paddingRight="12dp"
+        android:paddingRight="25dp"
+        android:textColor="@color/wallet_text_gray_color"
         android:paddingBottom="15dp"
         tools:text="@string/wallet_import_wallet_from_keystore_tip"
         android:textSize="15sp"
