--- a/app/src/main/res/layout/wallet_fragment_common_dialog_input.xml
+++ b/app/src/main/res/layout/wallet_fragment_common_dialog_input.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/wallet_please_input_password"
         android:textColor="@color/wallet_black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,11 +20,11 @@
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="22dp"
         android:paddingLeft="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="35dp"
         android:inputType="textPassword"
         android:background="@drawable/wallet_shape_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -44,8 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_cancel"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="16sp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/line2"
@@ -56,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="16sp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/line2"
         app:layout_constraintRight_toRightOf="parent"
