--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_mnemonic.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_mnemonic.xml
@@ -14,6 +14,9 @@
             android:id="@+id/input_password"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             app:layout_constraintTop_toBottomOf="@id/top_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
