--- a/app/src/main/res/layout/wallet_gender_select_dialog_fragment.xml
+++ b/app/src/main/res/layout/wallet_gender_select_dialog_fragment.xml
@@ -11,9 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/wallet_gender_boy"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="23sp"
-        android:textStyle="bold"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,9 +37,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="@string/wallet_gender_girl"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="23sp"
-        android:textStyle="bold"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
