--- a/app/src/main/res/layout/wallet_identity_bind_dialog_view.xml
+++ b/app/src/main/res/layout/wallet_identity_bind_dialog_view.xml
@@ -11,11 +11,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         tools:text="@string/wallet_initialize_replace"
         android:textColor="@color/wallet_black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,26 +23,26 @@
     <TextView
         android:id="@+id/address"
         app:layout_constraintTop_toBottomOf="@id/message"
-        android:textSize="13sp"
+        android:textSize="12sp"
         android:drawableRight="@mipmap/wallet_copy_blue"
         android:textColor="@color/wallet_text_grey"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="25dp"
         android:singleLine="true"
         tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95"
         android:ellipsize="middle"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
         android:paddingLeft="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="25dp"
         android:inputType="textPassword"
         android:background="@drawable/wallet_shape_edittext"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -74,8 +74,8 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="16sp"
+        android:textColor="@color/wallet_main_blue_color"
+        android:textSize="15sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
